--- a/CulturalShare.PostWrite.API/CulturalShare.PostWrite.API.csproj
+++ b/CulturalShare.PostWrite.API/CulturalShare.PostWrite.API.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CulturalShare.Shared\CulturalShare.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
