--- a/CulturalShare.Gateway/CulturalShare.Gateway.csproj
+++ b/CulturalShare.Gateway/CulturalShare.Gateway.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="7.1.0" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
