tables were added in post service

--- a/CulturalShare.PostWrite.API/appsettings.json
+++ b/CulturalShare.PostWrite.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PostgresDB": "Host=localhost;Port=5432;Database=PostWrite;Username=docker;Password=docker;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
