--- a/CulturaShare.MongoSidecar/CulturaShare.MongoSidecar.csproj
+++ b/CulturaShare.MongoSidecar/CulturaShare.MongoSidecar.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CulturalShare.PostWrite.Domain\CulturalShare.PostWrite.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
