--- a/CulturalShare.PostWrite.API/CulturalShare.PostWrite.API.csproj
+++ b/CulturalShare.PostWrite.API/CulturalShare.PostWrite.API.csproj
@@ -6,12 +6,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+
+	<ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CulturalShare.PostWrite.Domain\CulturalShare.PostWrite.Domain.csproj" />
     <ProjectReference Include="..\CulturalShare.Shared\CulturalShare.Shared.csproj" />
   </ItemGroup>
 
