mongo db creation of connectors to debesium set up

--- a/CulturaShare.MongoSidecar/appsettings.json
+++ b/CulturaShare.MongoSidecar/appsettings.json
@@ -5,6 +5,9 @@
   },
   "ConnectionStrings": {
     "MongoDB": "Server=localhost;Database=AdminDB;Trusted_Connection=True;TrustServerCertificate=True;",
-    "PostgresDB": "Host=localhost;Port=5432;Database=exampledb;Username=docker;Password=docker;"
+    "PostgresDB": "Host=localhost;Port=5432;Database=PostWrite;Username=docker;Password=docker;",
+  },
+  "DebesiumConfiguration": {
+    "Url": "http://localhost:8083"
   }
 }
