--- a/CulturalShare.Posts.Data/CulturalShare.Posts.Data.csproj
+++ b/CulturalShare.Posts.Data/CulturalShare.Posts.Data.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Entities\MongoEntities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+  </ItemGroup>
+
 </Project>
