opotrunity to pull data from postgres was added

--- a/CulturaShare.MongoSidecar/appsettings.json
+++ b/CulturaShare.MongoSidecar/appsettings.json
@@ -1,7 +1,7 @@
 {
   "KafkaConfiguration": {
     "Url": "localhost:29092",
-    "GroupId": "123"
+    "GroupId": "1a234"
   },
   "ConnectionStrings": {
     "MongoDB": "Server=localhost;Database=AdminDB;Trusted_Connection=True;TrustServerCertificate=True;",
