mongo sidecar was completed

--- a/CulturaShare.MongoSidecar/appsettings.json
+++ b/CulturaShare.MongoSidecar/appsettings.json
@@ -1,13 +1,16 @@
 {
   "KafkaConfiguration": {
     "Url": "localhost:29092",
-    "GroupId": "1a234"
+    "GroupId": "1a234a1"
   },
   "ConnectionStrings": {
-    "MongoDB": "Server=localhost;Database=AdminDB;Trusted_Connection=True;TrustServerCertificate=True;",
-    "PostgresDB": "Host=localhost;Port=5432;Database=PostWrite;Username=docker;Password=docker;",
+    "PostgresDB": "Host=localhost;Port=5432;Database=PostWrite;Username=docker;Password=docker;"
   },
   "DebesiumConfiguration": {
     "Url": "http://localhost:8083"
+  },
+  "MongoConfiguration": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "PostReadDB"
   }
 }
