--- a/CulturaShare.MongoSidecar/CulturalShare.MongoSidecar.csproj
+++ b/CulturaShare.MongoSidecar/CulturalShare.MongoSidecar.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -15,12 +15,15 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.22.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CulturalShare.PostRead.Domain\CulturalShare.PostRead.Domain.csproj" />
     <ProjectReference Include="..\CulturalShare.PostWrite.Domain\CulturalShare.PostWrite.Domain.csproj" />
+    <ProjectReference Include="..\CulturalShare.Shared.DB\CulturalShare.Shared.DB.csproj" />
   </ItemGroup>
 
   <ItemGroup>
