services installer were added

--- a/CulturalShare.PostRead.API/CulturalShare.PostRead.API.csproj
+++ b/CulturalShare.PostRead.API/CulturalShare.PostRead.API.csproj
@@ -6,13 +6,24 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+	
+	    <PropertyGroup>
+	    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	    <NoWarn>$(NoWarn);1591</NoWarn>
+	    <UserSecretsId>1071abf9-0651-4199-92dd-64c464274c0a</UserSecretsId>
+	    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    </PropertyGroup>	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+		<UserSecretsId>1071abf9-0651-4199-92dd-64c464274c0a</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
-
-
 
   <ItemGroup>
     <ProjectReference Include="..\CulturalShare.PostRead.Services\CulturalShare.PostRead.Services.csproj" />
