Auth service was added

--- a/CulturalShare.Gateway/appsettings.json
+++ b/CulturalShare.Gateway/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GrpcClientsUrls": {
+    "AuthClient": "https://localhost:7072",
+    "PostReadClient": "https://localhost:7102",
+    "PostWriteClient": "https://localhost:7143"
+  }
 }
