--- a/CulturalShare.Auth/appsettings.json
+++ b/CulturalShare.Auth/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AuthDB": "Host=localhost;Port=5432;Database=AuthDB;Username=docker;Password=docker;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
