--- a/CulturalShare.PostWrite.API/appsettings.json
+++ b/CulturalShare.PostWrite.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresDB": "Host=localhost;Port=5432;Database=PostWrite;Username=docker;Password=docker;"
+    "PostWriteDB": "Host=localhost;Port=5432;Database=PostWrite;Username=docker;Password=docker;"
   },
   "Logging": {
     "LogLevel": {
